--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "qs": "^6.11.0",
+    "querystring": "^0.2.1",
+    "randomstring": "^1.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
